--- a/styles.css
+++ b/styles.css
@@ -245,3 +245,157 @@ footer h2 {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     object-fit: cover;
 }
+
+.fixed-nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
+.fixed-nav ul {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    margin: 0;
+    padding: 10px 0;
+}
+.fixed-nav li {
+    margin: 0 15px;
+}
+.fixed-nav a {
+    color: #ffcc00;
+    text-decoration: none;
+}
+.fixed-nav a:hover {
+    text-decoration: underline;
+}
+
+@media screen and (max-width: 767px) {
+    .about-content img {
+        max-width: 150px;
+        height: 150px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    header nav ul li a {
+        font-size: 1em;
+    }
+    .about-content img {
+        display: none;
+    }
+    h1 {
+        font-size: 1.8em;
+    }
+
+    h2 {
+        font-size: 1.5em;
+    }
+
+    h3 {
+        font-size: 1.2em;
+    }
+    .fixed-nav ul li:nth-child(5) {
+        display: none;
+    }
+}
+@media screen and (max-width: 400px) {
+    .fixed-nav ul li:nth-child(4) {
+        display: none;
+    }
+    #price {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 300px) {
+    .fixed-nav ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .fixed-nav a {
+        padding: 5px 10px;
+        font-size: 0.9em;
+    }
+    .fixed-nav ul li:nth-child(4) {
+        display: contents;
+    }
+    .fixed-nav ul li:nth-child(5) {
+        display: contents;
+    }
+    body {
+        font-size: 0.75em;
+    }
+
+    h1 {
+        font-size: 1.6em;
+    }
+
+    h2 {
+        font-size: 1.3em;
+    }
+
+    h3 {
+        font-size: 1em;
+    }
+
+    p {
+        font-size: 0.85em;
+    }
+}
+
+#price {
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #1a1a1a;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+    max-width: 600px;
+}
+
+#price h2 {
+    text-align: center;
+    font-size: 1.8em;
+    color: #ffcc00;
+    margin-bottom: 20px;
+}
+
+.table {
+    display: grid;
+    grid-template-rows: auto;
+}
+
+.table-row {
+    display: grid;
+    grid-template-columns: repeat(3, 33.3%);
+}
+
+.cell {
+    text-align: center;
+    padding: 10px;
+    border: 1px solid #0d0d0d;
+    font-size: 1em;
+    color: #dcdcdc;
+    background-color: #2a2a2a;
+}
+
+.table-row:nth-child(even) .cell {
+    background-color: #3a3a3a;
+}
+
+.header .cell-header{
+    background-color: #ffcc00 !important;
+    color: black;
+    font-weight: bold;
+}
+
+.cell:nth-child(1){
+    background-color: #ffcc00 !important;
+    color: black;
+    font-weight: bold;
+}
+
