--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ h3 {
 #subjects {
     margin-top: 30px;
     padding-bottom: 20px;
+    margin-left: 20px;
 }
 
 #subjects h2 {
@@ -212,7 +213,12 @@ img {
 footer {
     background-color: #1a1a1a; /* Темный фон */
     color: #dcdcdc; /* Светлый текст */
-    padding: 20px;
+    text-align: center;
+}
+
+#contact {
+    background-color: #1a1a1a; /* Темный фон */
+    color: #dcdcdc; /* Светлый текст */
     text-align: center;
 }
 
@@ -224,6 +230,7 @@ footer h2 {
     display: flex;
     align-items: center;
     gap: 20px;
+    margin-left: 30px;
 }
 
 .about-content p {
@@ -397,5 +404,26 @@ footer h2 {
     background-color: #ffcc00 !important;
     color: black;
     font-weight: bold;
+}
+
+.menu a {
+    text-decoration: none;
+    color: #ffcc00;
+    padding: 10px;
+    display: block;
+}
+
+/* Стиль активной ссылки */
+.menu a.active {
+    font-weight: bold;
+    color: black;
+    background-color: #ffcc00;
+    border-radius: 5px;
+}
+
+/* Стиль для элементов меню при наведении */
+.menu li.hovered {
+    background-color: lightgray;
+    transition: background-color 0.3s ease;
 }
 
